# scikit-build-sample-projects

./: .pre-commit-config.yaml
projects/hello-split-layout/: CMakeLists.txt  setup.py
projects/hello-split-layout/src/: CMakeLists.txt
projects/hello-split-layout/src/pymodule/: CMakeLists.txt
projects/hello-split-layout/src/python/: CMakeLists.txt
